--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
-Django==2.1.5                                                                                                                                                         django-heroku==0.3.1                                                                                                                                                  
-gunicorn==19.9.0                                                                                                                                                      
+gunicorn
+django_heroku
